SmartBuys Philippines -Create new pages -Fix issue with mobile view drop down navbar

--- a/package.json
+++ b/package.json
@@ -9,11 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.4",
     "@next/font": "13.1.2",
+    "@nextui-org/react": "^1.0.0-beta.12",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.2",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "chart.js": "^4.1.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.3",
     "next": "13.1.2",
+    "next-connect": "^0.13.0",
+    "notistack": "^2.0.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.42.1",
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
+    "reduxjs-toolkit-persist": "^7.2.1",
+    "sharp": "^0.31.3",
+    "swr": "^2.0.1"
   }
 }
