--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.1.2",
+    "ejs": "^3.1.8",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
+    "multer": "1.4.3",
     "next": "13.1.2",
     "next-connect": "^0.13.0",
+    "nodemailer": "^6.9.1",
     "notistack": "^2.0.8",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
