--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.1.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
+    "mui-tel-input": "^3.1.1",
     "multer": "1.4.3",
     "next": "13.1.2",
     "next-connect": "^0.13.0",
