--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.1.2",
+    "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
