--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^3.1.8",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
+    "firebase": "^9.19.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "mui-tel-input": "^3.1.1",
