SmartBuys Philippines: - Code Clean Up

--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@mui/material": "^5.11.4",
     "@next/font": "13.1.2",
     "@nextui-org/react": "^1.0.0-beta.12",
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
-    "chart.js": "^4.1.2",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "eslint": "8.32.0",
