--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "mongoose": "^6.8.3",
     "mui-tel-input": "^3.1.1",
     "multer": "^1.4.5-lts.1",
-    "next": "13.1.2",
+    "next": "^13.5.5",
     "next-connect": "^0.13.0",
     "nodemailer": "^6.9.1",
     "notistack": "^2.0.8",
