--- a/package.json
+++ b/package.json
@@ -9,17 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@nextui-org/react": "^2.2.9",
+    "@prisma/client": "^5.10.2",
+    "@sentry/nextjs": "^7.102.0",
+    "@tanstack/react-query": "^5.24.8",
+    "axios": "^1.6.7",
+    "classnames": "^2.5.1",
+    "cors": "^2.8.5",
+    "delay": "^6.0.0",
+    "ejs": "^3.1.9",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.0",
+    "framer-motion": "^11.0.5",
+    "lottie-react": "^2.4.0",
+    "next": "14.1.0",
+    "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.12",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "yup": "^1.4.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/ejs": "^3.1.5",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "prisma": "^5.10.2",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
