SmartBuys Philippines 2024: -Create Create Product Page -Create Edit Product Page -Create API endpoint for create product page -Create API endpoint for edit product page -Code clean up

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "_middleware.tsasd"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "_middleware.tsasd", "app/_utility/formidableasdasd.tsasd"],
   "exclude": ["node_modules"]
 }
