--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "ejs": "^3.1.9",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
+    "firebase": "^10.9.0",
+    "formidable": "^3.5.1",
     "framer-motion": "^11.0.5",
     "lottie-react": "^2.4.0",
     "next": "14.1.0",
@@ -33,15 +35,18 @@
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "uuid": "^9.0.1",
     "yup": "^1.4.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.5",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "prisma": "^5.10.2",
