--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -25,7 +25,7 @@
     "eslint-config-next": "^14.1.0",
     "firebase": "^10.9.0",
     "formidable": "^3.5.1",
-    "framer-motion": "^11.0.5",
+    "framer-motion": "10.12.16",
     "lottie-react": "^2.4.0",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "sweetalert2": "^11.11.1",
     "uuid": "^9.0.1",
     "yup": "^1.4.0",
     "zod": "^3.22.4"
