--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "sharp": "^0.33.4",
     "sweetalert2": "^11.11.1",
     "uuid": "^9.0.1",
     "yup": "^1.4.0",
