--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tiptap/react": "^2.6.6",
     "@tiptap/starter-kit": "^2.6.6",
     "@types/bcrypt": "^5.0.2",
+    "@vercel/analytics": "^1.3.1",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
